package com.grod.platform.entity;

public enum NotificationReferenceType {
    DEVIS,
    DOCUMENT
}
