package com.grod.platform.entity;

public enum NotificationType {
    NOUVELLE_DEMANDE_DEVIS,
    NOUVELLE_DEMANDE_DOCUMENT
}
