package com.grod.platform.entity;

public enum Role {
    ADMIN,
    COMMERCIAL
}
