package com.grod.platform.entity;

public enum StatutDemande {
    NOUVELLE,
    EN_TRAITEMENT,
    TRAITEE,
    ANNULEE
}